--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ packery-mode.pkgd.min.js
 gifcache/static/js/jPages.min.js
 gifcache/static/js/jquery-ui.min.js
 gifcache/static/js/packery-mode.pkgd.min.js
+jquery-color.min.js
